@@ -1,0 +1,19 @@
+# udev rules for the gpsd USB hotplugging
+
+SUBSYSTEM!="tty", GOTO="gpsd-usb_rules_end"
+
+#SYSFS{idVendor}=="067b", SYSFS{idProduct}=="2303", SUBSYSTEM=="tty", ACTION=="add", KERNEL=="ttyUSB[0-9]*", SYMLINK="gps%n", RUN+="/etc/hotplug/usb/gpsd add $root/%k"
+#SYSFS{idVendor}=="067b", SYSFS{idProduct}=="2303", SUBSYSTEM=="tty", ACTION=="remove", KERNEL=="ttyUSB[0-9]*", RUN+="/etc/hotplug/usb/gpsd remove $root/%k"
+SYSFS{idVendor}=="0403", SYSFS{idProduct}=="6001", SUBSYSTEM=="tty", ACTION=="add", KERNEL=="ttyUSB[0-9]*", SYMLINK="gps%n", RUN+="/etc/hotplug/usb/gpsd add $root/%k"
+SYSFS{idVendor}=="0403", SYSFS{idProduct}=="6001", SUBSYSTEM=="tty", ACTION=="remove", KERNEL=="ttyUSB[0-9]*", RUN+="/etc/hotplug/usb/gpsd remove $root/%k"
+SYSFS{idVendor}=="1163", SYSFS{idProduct}=="0100", SUBSYSTEM=="tty", ACTION=="add", KERNEL=="ttyUSB[0-9]*", SYMLINK="gps%n", RUN+="/etc/hotplug/usb/gpsd add $root/%k"
+SYSFS{idVendor}=="1163", SYSFS{idProduct}=="0100", SUBSYSTEM=="tty", ACTION=="remove", KERNEL=="ttyUSB[0-9]*", RUN+="/etc/hotplug/usb/gpsd remove $root/%k"
+SYSFS{idVendor}=="067b", SYSFS{idProduct}=="aaa0", SUBSYSTEM=="tty", ACTION=="add", KERNEL=="ttyUSB[0-9]*", SYMLINK="gps%n", RUN+="/etc/hotplug/usb/gpsd add $root/%k"
+SYSFS{idVendor}=="067b", SYSFS{idProduct}=="aaa0", SUBSYSTEM=="tty", ACTION=="remove", KERNEL=="ttyUSB[0-9]*", RUN+="/etc/hotplug/usb/gpsd remove $root/%k"
+SYSFS{idVendor}=="091e", SYSFS{idProduct}=="0003", SUBSYSTEM=="tty", ACTION=="add", KERNEL=="ttyUSB[0-9]*", SYMLINK="gps%n", RUN+="/etc/hotplug/usb/gpsd add $root/%k"
+SYSFS{idVendor}=="091e", SYSFS{idProduct}=="0003", SUBSYSTEM=="tty", ACTION=="remove", KERNEL=="ttyUSB[0-9]*", RUN+="/etc/hotplug/usb/gpsd remove $root/%k"
+#SYSFS{idVendor}=="", SYSFS{idProduct}=="", SUBSYSTEM=="tty", ACTION=="add", KERNEL=="ttyUSB[0-9]*", SYMLINK="gps%n", RUN+="/etc/hotplug/usb/gpsd add $root/%k"
+#SYSFS{idVendor}=="", SYSFS{idProduct}=="", SUBSYSTEM=="tty", ACTION=="remove", KERNEL=="ttyUSB[0-9]*", RUN+="/etc/hotplug/usb/gpsd remove $root/%k"
+
+LABEL="gpsd-usb_rules_end"
+
